--- a/ts/starter/tsconfig.json
+++ b/ts/starter/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
+    "strictNullChecks": false,
     "module": "commonjs",
     "moduleResolution": "node",
     "outDir": "dist",
